[project]
name = "facebook"
version = "0.1.0"
description = "Parses Facbook Messenger JSON dumps for youtube videos and their reactions"
authors = [
    {name = "Michael Miller", email = "michaelsmiller2@gmail.com"},
]
dependencies = [
    "loguru>=0.7.2",
    "yt-dlp>=2024.5.27",
    "ffmpeg>=1.4",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
main.cmd = "src/facebook/main.py"

